--- a/WPF.Bootstrap.Demo/Views/List.xaml
+++ b/WPF.Bootstrap.Demo/Views/List.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" x:Class="WPF.Bootstrap.Demo.Views.List"
+             x:Class="WPF.Bootstrap.Demo.Views.List"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
