--- a/WPF.Bootstrap.Demo/Views/TabNaviControl.xaml
+++ b/WPF.Bootstrap.Demo/Views/TabNaviControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WPF.Bootstrap.Demo.Views.TabPanelControl"
+﻿<UserControl x:Class="WPF.Bootstrap.Demo.Views.TabNaviControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
