--- a/WPF.Bootstrap.Demo/MainWindow.xaml
+++ b/WPF.Bootstrap.Demo/MainWindow.xaml
@@ -27,5 +27,8 @@
         <TabItem Header="TabNavi">
             <view:TabNaviControl></view:TabNaviControl>
         </TabItem>
+      <TabItem Header="TabPanel">
+        <view:TabPanelControl></view:TabPanelControl>
+      </TabItem>
     </TabControl>
 </Window>
