--- a/WPF.Bootstrap/Themes/Default/TabNavi.xaml
+++ b/WPF.Bootstrap/Themes/Default/TabNavi.xaml
@@ -34,7 +34,7 @@
         </Setter>
     </Style>
 
-  <Style x:Key="TabPanelStyle" TargetType="{x:Type TabControl}">
+  <Style x:Key="TabNaviStyle" TargetType="{x:Type TabControl}">
         <Setter Property="Padding" Value="2"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
