--- a/WPF.Bootstrap/Themes/Default/TabPanel.xaml
+++ b/WPF.Bootstrap/Themes/Default/TabPanel.xaml
@@ -2,37 +2,84 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:WPF.Bootstrap.Themes.Default">
   <SolidColorBrush x:Key="TabItem.Selected.Background" Color="#FFFFFF"/>
-    <SolidColorBrush x:Key="TabItem.Selected.Border" Color="#ACACAC"/>
-    <Style TargetType="TabItem" x:Key="TabPanelItemStyle">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="TabItem">
-                    <Grid Cursor="Hand">
-                        <Border Name="bd" Background="White" Margin="0,0,-2,0" Opacity="0" CornerRadius="4,0,0,4"></Border>
-
-                        <Border Name="container" Background="#fff" Padding="15 10" BorderThickness="1,1,0,1" CornerRadius="4,0,0,4">
-                            <ContentPresenter Name="content" TextBlock.Foreground="{DynamicResource TextPrimary}" Content="{TemplateBinding Header}"></ContentPresenter>
-                        </Border>
-                    </Grid>
-
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsSelected" Value="True">
-                            <Setter TargetName="container" Property="BorderBrush" Value="#ddd"></Setter>
-                            <Setter TargetName="bd" Property="Opacity" Value="1"></Setter>
-                            <Setter TargetName="content" Property="TextBlock.Foreground" Value="#555"></Setter>
-                        </Trigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsMouseOver" Value="True"></Condition>
-                                <Condition Property="IsSelected" Value="False"></Condition>
-                            </MultiTrigger.Conditions>
-                            <Setter TargetName="container" Property="Background" Value="#eee"></Setter>
-                        </MultiTrigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+  <SolidColorBrush x:Key="TabItem.Selected.Border" Color="#ACACAC"/>
+  
+  <ControlTemplate x:Key="TabControlControlTemplate1" TargetType="{x:Type TabControl}">
+        <Grid x:Name="templateRoot" ClipToBounds="True" SnapsToDevicePixels="True" KeyboardNavigation.TabNavigation="Local">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition x:Name="ColumnDefinition0"/>
+                <ColumnDefinition x:Name="ColumnDefinition1" Width="0"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition x:Name="RowDefinition0" Height="Auto"/>
+                <RowDefinition x:Name="RowDefinition1" Height="*"/>
+            </Grid.RowDefinitions>
+      <TabPanel x:Name="HeaderPanel" Background="#337ab7" Grid.Column="0" IsItemsHost="True" Margin="2,2,2,0" Grid.Row="0" KeyboardNavigation.TabIndex="1" Panel.ZIndex="1"/>
+            <Border x:Name="ContentPanel" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Grid.Column="0" KeyboardNavigation.DirectionalNavigation="Contained" Grid.Row="1" KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local">
+                <ContentPresenter x:Name="PART_SelectedContentHost" ContentTemplate="{TemplateBinding SelectedContentTemplate}" Content="{TemplateBinding SelectedContent}" ContentStringFormat="{TemplateBinding SelectedContentStringFormat}" ContentSource="SelectedContent" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+            </Border>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="TabStripPlacement" Value="Bottom">
+                <Setter Property="Grid.Row" TargetName="HeaderPanel" Value="1"/>
+                <Setter Property="Grid.Row" TargetName="ContentPanel" Value="0"/>
+                <Setter Property="Height" TargetName="RowDefinition0" Value="*"/>
+                <Setter Property="Height" TargetName="RowDefinition1" Value="Auto"/>
+                <Setter Property="Margin" TargetName="HeaderPanel" Value="2,0,2,2"/>
+            </Trigger>
+            <Trigger Property="TabStripPlacement" Value="Left">
+                <Setter Property="Grid.Row" TargetName="HeaderPanel" Value="0"/>
+                <Setter Property="Grid.Row" TargetName="ContentPanel" Value="0"/>
+                <Setter Property="Grid.Column" TargetName="HeaderPanel" Value="0"/>
+                <Setter Property="Grid.Column" TargetName="ContentPanel" Value="1"/>
+                <Setter Property="Width" TargetName="ColumnDefinition0" Value="Auto"/>
+                <Setter Property="Width" TargetName="ColumnDefinition1" Value="*"/>
+                <Setter Property="Height" TargetName="RowDefinition0" Value="*"/>
+                <Setter Property="Height" TargetName="RowDefinition1" Value="0"/>
+                <Setter Property="Margin" TargetName="HeaderPanel" Value="2,2,0,2"/>
+            </Trigger>
+            <Trigger Property="TabStripPlacement" Value="Right">
+                <Setter Property="Grid.Row" TargetName="HeaderPanel" Value="0"/>
+                <Setter Property="Grid.Row" TargetName="ContentPanel" Value="0"/>
+                <Setter Property="Grid.Column" TargetName="HeaderPanel" Value="1"/>
+                <Setter Property="Grid.Column" TargetName="ContentPanel" Value="0"/>
+                <Setter Property="Width" TargetName="ColumnDefinition0" Value="*"/>
+                <Setter Property="Width" TargetName="ColumnDefinition1" Value="Auto"/>
+                <Setter Property="Height" TargetName="RowDefinition0" Value="*"/>
+                <Setter Property="Height" TargetName="RowDefinition1" Value="0"/>
+                <Setter Property="Margin" TargetName="HeaderPanel" Value="0,2,2,2"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="TextElement.Foreground" TargetName="templateRoot" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    
+  <Style TargetType="TabItem" x:Key="TabPanelItemStyle">
+      <Setter Property="Template">
+          <Setter.Value>
+              <ControlTemplate TargetType="TabItem">
+                <Grid Cursor="Hand">
+                  <Border Name="container" Background="#337ab7" Padding="15 10" BorderThickness="0">
+                    <TextBlock Name="content" MinWidth="60" Foreground="#ccc" Text="{TemplateBinding Header}"></TextBlock>
+                  </Border>
+                </Grid>
+                <ControlTemplate.Triggers>
+                  <Trigger Property="IsSelected" Value="True">
+                      <Setter TargetName="content" Property="TextBlock.Foreground" Value="#fff"></Setter>
+                  </Trigger>
+                  <MultiTrigger>
+                      <MultiTrigger.Conditions>
+                          <Condition Property="IsMouseOver" Value="True"></Condition>
+                          <Condition Property="IsSelected" Value="False"></Condition>
+                      </MultiTrigger.Conditions>
+                      <Setter TargetName="content" Property="Foreground" Value="#fff"></Setter>
+                  </MultiTrigger>
+                </ControlTemplate.Triggers>
+              </ControlTemplate>
+          </Setter.Value>
+      </Setter>
+  </Style>
 
   <Style x:Key="TabPanelStyle" TargetType="{x:Type TabControl}">
         <Setter Property="Padding" Value="2"/>
@@ -42,16 +89,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource TabItem.Selected.Border}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TabControl}">
-                    <Grid x:Name="templateRoot" ClipToBounds="true" SnapsToDevicePixels="true" KeyboardNavigation.TabNavigation="Local">
-                        <TabPanel  x:Name="headerPanel" Background="Transparent" IsItemsHost="true" Margin="2,2,2,0" 
-                                   KeyboardNavigation.TabIndex="1" Panel.ZIndex="1"/>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="ItemContainerStyle" Value="{StaticResource TabPanelItemStyle}"/>
-    </Style>
+    <Setter Property="Template" Value="{StaticResource TabControlControlTemplate1}"/>
+    <Setter Property="ItemContainerStyle" Value="{StaticResource TabPanelItemStyle}"/>
+  </Style>
 </ResourceDictionary>
