--- a/WPF.Bootstrap/Themes/Default/TabInPanel.xaml
+++ b/WPF.Bootstrap/Themes/Default/TabInPanel.xaml
@@ -1,10 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:WPF.Bootstrap.Themes.Default">
+                    xmlns:local="clr-namespace:WPF.Bootstrap.Themes.Default"
+                    xmlns:controls="clr-namespace:WPF.Bootstrap.Controls">
   <SolidColorBrush x:Key="TabItem.Selected.Background" Color="#FFFFFF"/>
   <SolidColorBrush x:Key="TabItem.Selected.Border" Color="#ACACAC"/>
   
-  <ControlTemplate x:Key="TabControlControlTemplate1" TargetType="{x:Type TabControl}">
+  <ControlTemplate x:Key="TabControlControlTemplate1" TargetType="{x:Type controls:TabInPanel}">
         <Grid x:Name="templateRoot" ClipToBounds="True" SnapsToDevicePixels="True" KeyboardNavigation.TabNavigation="Local">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition x:Name="ColumnDefinition0"/>
@@ -14,7 +15,7 @@
                 <RowDefinition x:Name="RowDefinition0" Height="Auto"/>
                 <RowDefinition x:Name="RowDefinition1" Height="*"/>
             </Grid.RowDefinitions>
-      <TabPanel x:Name="HeaderPanel" Background="#337ab7" Grid.Column="0" IsItemsHost="True" Margin="2,2,2,0" Grid.Row="0" KeyboardNavigation.TabIndex="1" Panel.ZIndex="1"/>
+            <TabPanel x:Name="HeaderPanel" Background="{TemplateBinding PanelBackground}" Grid.Column="0" IsItemsHost="True" Margin="2,2,2,0" Grid.Row="0" KeyboardNavigation.TabIndex="1" Panel.ZIndex="1"/>
             <Border x:Name="ContentPanel" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Grid.Column="0" KeyboardNavigation.DirectionalNavigation="Contained" Grid.Row="1" KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local">
                 <ContentPresenter x:Name="PART_SelectedContentHost" ContentTemplate="{TemplateBinding SelectedContentTemplate}" Content="{TemplateBinding SelectedContent}" ContentStringFormat="{TemplateBinding SelectedContentStringFormat}" ContentSource="SelectedContent" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
             </Border>
@@ -60,7 +61,7 @@
           <Setter.Value>
               <ControlTemplate TargetType="TabItem">
                 <Grid Cursor="Hand">
-                  <Border Name="container" Background="#337ab7" Padding="15 10" BorderThickness="0">
+                  <Border Name="container" Padding="15 10" BorderThickness="0">
                     <TextBlock Name="content" MinWidth="60" Foreground="#ccc" Text="{TemplateBinding Header}"></TextBlock>
                   </Border>
                 </Grid>
@@ -81,7 +82,7 @@
       </Setter>
   </Style>
 
-  <Style x:Key="TabPanelStyle" TargetType="{x:Type TabControl}">
+  <Style x:Key="TabInPanelStyle" TargetType="{x:Type controls:TabInPanel}">
         <Setter Property="Padding" Value="2"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
