--- a/WPF.Bootstrap.Demo/MainWindow.xaml
+++ b/WPF.Bootstrap.Demo/MainWindow.xaml
@@ -1,9 +1,7 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:b="http://www.scheshan.com/bootstrap"
         x:Class="WPF.Bootstrap.Demo.MainWindow"
-        xmlns:wpf="http://github.com/scheshan/bootstrap"
         xmlns:view="clr-namespace:WPF.Bootstrap.Demo.Views"
         Title="Demo" Height="700" Width="800">
     
@@ -27,7 +25,7 @@
         <TabItem Header="TabNavi">
             <view:TabNaviControl></view:TabNaviControl>
         </TabItem>
-      <TabItem Header="TabPanel">
+      <TabItem Header="TabInPanel">
         <view:TabPanelControl></view:TabPanelControl>
       </TabItem>
     </TabControl>
