--- a/WPF.Bootstrap.Demo/Views/Panel.xaml
+++ b/WPF.Bootstrap.Demo/Views/Panel.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:bootstrap="http://github.com/scheshan/bootstrap"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:bootstrap="clr-namespace:WPF.Bootstrap.Controls;assembly=WPF.Bootstrap"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
@@ -19,8 +19,8 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
-        <bootstrap:BootstrapPanel Margin="10" Type="Default" Header="Default Panel">
+
+      <bootstrap:BootstrapPanel Margin="10" Type="Default" Header="Default Panel">
             <TextBlock>content</TextBlock>
             <bootstrap:BootstrapPanel.Footer>
                 <TextBlock>footer</TextBlock>
