--- a/WPF.Bootstrap.Demo/Views/TabPanelControl.xaml
+++ b/WPF.Bootstrap.Demo/Views/TabPanelControl.xaml
@@ -3,13 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WPF.Bootstrap.Demo.Views"
+             xmlns:controls="clr-namespace:WPF.Bootstrap.Controls;assembly=WPF.Bootstrap"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
   <UserControl.Resources>
   </UserControl.Resources>
   <Grid>
-    <TabControl TabStripPlacement="Top" Style="{DynamicResource TabPanelStyle}" >
+    <controls:TabInPanel TabStripPlacement="Top" Style="{DynamicResource TabInPanelStyle}" PanelBackground="{DynamicResource BgPrimary}">
       <TabItem Header="1">
         <TextBlock Text="test"></TextBlock>
       </TabItem>
@@ -17,6 +17,6 @@
       <TabItem Header="1 asd asd adsf"></TabItem>
       <TabItem Header="1 incalctive"></TabItem>
       <TabItem Header="1 active"></TabItem>
-    </TabControl>
+    </controls:TabInPanel>
   </Grid>
 </UserControl>
