--- a/WPF.Bootstrap.Demo/Views/Text.xaml
+++ b/WPF.Bootstrap.Demo/Views/Text.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:bootstrap="http://github.com/scheshan/bootstrap"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:bootstrap="clr-namespace:WPF.Bootstrap.Controls;assembly=WPF.Bootstrap"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800">
     <StackPanel>
@@ -79,5 +79,6 @@
                 <Run Text="Change a few things up and try submitting again."/>
             </TextBlock>
         </bootstrap:Alert>
+    
     </StackPanel>
 </UserControl>
