--- a/WPF.Bootstrap/Themes/Default/TextBox.xaml
+++ b/WPF.Bootstrap/Themes/Default/TextBox.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="TextBox">
-        <Setter Property="Padding" Value="4"/>
+        <Setter Property="Padding" Value="2"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
@@ -12,30 +12,29 @@
                                 
                             </Border.Effect>
                         </Border>
-                        <Border Name="container" Padding="{TemplateBinding Padding}" Height="{TemplateBinding Height}" BorderThickness="1" BorderBrush="#ccc" Background="#fff" CornerRadius="4" Margin="1">
+                        <Border Name="container" Padding="{TemplateBinding Padding}" Height="{TemplateBinding Height}" BorderThickness="1" BorderBrush="#cccccc" Background="#ffffff" CornerRadius="4" Margin="1">
                             <ScrollViewer Padding="0" x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                         </Border>
-
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup>
-                                <VisualState Name="Normal"></VisualState>
-                                <VisualState Name="Focused">
-                                    <Storyboard>
-                                        <ColorAnimation Storyboard.TargetName="container" Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)"
-                                                        Duration="0:0:0.05" To="#66afe9"></ColorAnimation>
-                                        <DoubleAnimation Storyboard.TargetName="bd" Storyboard.TargetProperty="Opacity"
-                                                            Duration="0:0:0.05" To="1"></DoubleAnimation>
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState Name="Disabled">
-                                    <Storyboard>
-                                        <ColorAnimation Storyboard.TargetName="container" Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
-                                                        Duration="0:0:0.05" To="#eee"></ColorAnimation>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
                     </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="container" Property="Background" Value="#eeeeee"/>
+                        </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsReadOnly" Value="True"></Condition>
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="container" Property="BorderThickness" Value="0"></Setter>
+                        </MultiTrigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsFocused" Value="True"></Condition>
+                                <Condition Property="IsReadOnly" Value="False"></Condition>
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="container" Property="BorderBrush" Value="#66afe9"></Setter>
+                            <Setter TargetName="bd" Property="Opacity" Value="1"></Setter>
+                        </MultiTrigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
