minor change to v0.0.9

--- a/WPF.Bootstrap.Demo/Views/Text.xaml
+++ b/WPF.Bootstrap.Demo/Views/Text.xaml
@@ -29,6 +29,7 @@
         </Border>
 
         <TextBox Margin="10" Text="textbox"></TextBox>
+        <TextBox Margin="10" Text="textbox 2"></TextBox>
 
         <TextBox Margin="10" IsEnabled="False" Text="textbox disabled"></TextBox>
 
